add report profitable product
